# irssi-wire

./: Cargo.toml  README.md  build.rs  headers.h  recs.h
.github/workflows/: rust.yml
examples/: auth.rs
src/: lib.rs
src/irssi/: bindgen_output.rs  bindings.rs
src/net/: mod.rs
src/net/model/: client.rs  mod.rs  prekeys.rs
src/net/protos/: mod.rs  wire_api.rs  wire_websocket.rs
src/net/wire_api/: auth.rs  conversations.rs  error.rs  members.rs  mod.rs  self_info.rs  wire_client.rs
