[package]
name = "irssi-wire"
version = "0.1.0"
authors = ["Henrik Böving <hargonix@gmail.com>"]
edition = "2018"
license = "MIT"

[build-dependencies]
bindgen = "0.50"
protoc-rust = "2.8.1"

[lib]
crate-type = ["dylib"]

[dependencies]
diesel = { version = "1.4.2", features=["sqlite"] }
cryptobox = { git = "https://github.com/wireapp/cryptobox.git", branch = "develop" }
proteus    = { git = "https://github.com/wireapp/proteus", branch = "develop" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
protobuf = "2.8.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
base64 = "0.10.1"
