[package]
name = "irssi-wire"
version = "0.1.0"
authors = ["Henrik Böving <hargonix@gmail.com>"]
edition = "2018"
license = "MIT"

[build-dependencies]
bindgen = "0.50"
protoc-rust = "2.8.1"

[lib]
crate-type = ["rlib","dylib"]

[dependencies]
cryptobox = { git = "https://github.com/wireapp/cryptobox.git", branch = "develop" }
proteus    = { git = "https://github.com/wireapp/proteus", branch = "develop" }
protobuf = "2.8.1"
uuid = { version = "0.7", features = ["serde", "v4"] }
base64 = "0.10.1"
tungstenite = "0.9.2"
hyper = "0.13.1"
hyper-tls = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2.6", features = ["full"] }

